rotary_enc_hard.cydsn/REBUILD.log
--------------- Rebuild Started: 04/05/2018 18:12:16 Project: rotary_enc_hard, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
Deleting file ".\rotary_enc_hard.cycdx"
Deleting file ".\rotary_enc_hard.svd"
Deleting file ".\rotary_enc_hard.rpt"
Deleting file ".\rotary_enc_hard_timing.html"
cydsfit.exe -.appdatapath "C:\Users\mechatoro\AppData\Local\Cypress Semiconductor\PSoC Creator\4.1" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p "C:\Users\mechatoro\Documents\PSoC Creator\rotary_enc_hard\rotary_enc_hard.cydsn\rotary_enc_hard.cyprj" -d CY8C5868AXI-LP035 -s "C:\Users\mechatoro\Documents\PSoC Creator\rotary_enc_hard\rotary_enc_hard.cydsn\Generated_Source\PSoC5" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
ADD: fit.M0032: warning: Clock Warning: (Clock_2's accuracy range '10  Hz -55% +100%, (4.5  Hz - 20  Hz)' is not within the specified tolerance range '10  Hz +/- 5%, (9.5  Hz - 10.5  Hz)'.).
 * C:\Users\mechatoro\Documents\PSoC Creator\rotary_enc_hard\rotary_enc_hard.cydsn\rotary_enc_hard.cydwr (Clock_2)
 * C:\Users\mechatoro\Documents\PSoC Creator\rotary_enc_hard\rotary_enc_hard.cydsn\TopDesign\TopDesign.cysch (Instance:Clock_2)
HDL Generation...
Synthesis...
Tech Mapping...
ADD: pft.M0040: information: The following 2 pin(s) will be assigned a location by the fitter: \USBUART:Dm(0)\, \USBUART:Dp(0)\
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
main.c: In function 'PID':
main.c:29:5: error: stray '\343' in program
     dt = 1 / isr_clock;
     ^
main.c:29:5: error: stray '\200' in program
main.c:29:5: error: stray '\200' in program
main.c:29:5: error: stray '\343' in program
main.c:29:5: error: stray '\200' in program
main.c:29:5: error: stray '\200' in program
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 04/05/2018 18:12:39 ---------------
